--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Pulak C",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.15.3",
     "express": "^4.14.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
